--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: node:16-alpine
     container_name: gwala-client
     working_dir: /app
+    networks:
+      - gwala-backend-api_backend
     volumes:
       - .:/app
     ports:
@@ -13,3 +15,7 @@ services:
       - NODE_ENV=development
     command: >
       sh -c "yarn install && yarn dev"
+
+networks:
+  gwala-backend-api_backend:
+    external: true
